// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spaces tests change space to hq_integration 1`] = `
Array [
  "count",
  "4",
]
`;

exports[`Spaces tests change space to hq_integration 2`] = `
Array [
  "count",
  "41,088,058",
]
`;
